# parliament-tv

./: .gitignore  .swiftformat  .swiftlint.yml  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  TESTFLIGHT.md  plan.md  pyproject.toml  research.md
.github/ISSUE_TEMPLATE/: config.yml  endpoint_validation.yml  playback_bug.yml  schedule_metadata.yml  source_correction.yml  (+1 more)
.xcodebuildmcp/: config.yaml
App/: BrazilScheduleAdapter.swift  CPACScheduleAdapter.swift  ChannelActionOverlays.swift  ChannelCatalog.swift  ChannelCollections.swift  ChannelGuide.swift  ChannelGuideRail.swift  ChannelNavigationModifiers.swift  ContentView.swift  HLSProgramMetadataAdapter.swift  LinkOutSurface.swift  Localizable.xcstrings  Localization.swift  MacPlayerWindowConfigurator.swift  Models.swift  NewZealandScheduleAdapter.swift  OntarioCalendarAdapter.swift  ParliamentsApp.swift  PlatformPlayers.swift  PlayerSurface.swift  ProgramDrawer.swift  QuebecWebdiffusionAdapter.swift  ScheduleTextHelpers.swift
Config/: Info-tvOS.plist
Parliaments.xcodeproj/: project.pbxproj
Scripts/: verify.sh
Tests/: BrazilScheduleAdapterTests.swift  CPACScheduleAdapterTests.swift  ChannelGuideTests.swift  HLSProgramMetadataTests.swift  LocalizationTests.swift  NewZealandScheduleAdapterTests.swift  OntarioCalendarAdapterTests.swift  QuebecWebdiffusionAdapterTests.swift
data/: channels.json
docs/: open-parliament-streams.md  source-rights-and-permissions.md  sources-and-provenance.md
parliament_streams/: __init__.py
tests/: test_catalogue_contract.py  test_scraper_contract.py
(+13 files in other folders)
