[project]
name = "parliament-streams"
version = "0.1.0"
description = "Documentation, data, and source scrapers for public parliamentary stream research."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
